# MC-Server-Wrapper

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SERVER_SOFTWARE_ICONS.md  TESTING_GUIDE.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: rust.yml
documents/: DESIGN_NEW_INSTANCE_MODAL.md  FEATURE_CHECKLIST.md  IMPLEMENTATION_PLAN.md
scripts/: sync-versions.js
src/: main.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/core/: app_config.rs  artifacts.rs  assets.rs  backup.rs  cache.rs  config.rs  config_files.rs  downloader.rs  errors.rs  init.rs  instance.rs  java_manager.rs  manager.rs  mod.rs  mod_loaders.rs  players.rs  plugins.rs  scheduler.rs  server.rs  server_properties.rs  utils.rs
tests/core/: asset_tests.rs  auto_restart_tests.rs  backup_tests.rs  bungeecord_tests.rs  cache_tests.rs  config_files_tests.rs  downloader_tests.rs  hangar_tests.rs  instance_tests.rs  java_tests.rs  lifecycle_tests.rs  mod.rs  modrinth_tests.rs  monitor_tests.rs  players_tests.rs  retry_tests.rs  scheduler_tests.rs  security_tests.rs  server_process_tests.rs  spiget_tests.rs  workflow_1_integration.rs  workflow_2_integration.rs
tests/e2e/: create-instance.spec.ts  server-lifecycle-gui.spec.ts  server-lifecycle.spec.ts  start-server.spec.ts
tests/e2e-slow/: server-lifecycle-gui.spec.ts
tests/tauri/: error_mapping_tests.rs  fs_commands_tests.rs  instance_commands_tests.rs  mod.rs  mod_plugin_commands_tests.rs  server_commands_tests.rs
tests/ui/: setup.ts  tabUtils.test.ts  utils.test.ts
ui/: App.tsx  BackupsTab.tsx  ConfigTab.tsx  CreateInstanceModal.tsx  DownloadProgressModal.tsx  InstanceFolderDropdown.tsx  InstanceSettingsDropdown.tsx  InstanceSettingsTab.tsx  LogsTab.tsx  ModsTab.tsx  PlayersTab.tsx  PluginsTab.tsx  SchedulesTab.tsx  StatsTab.tsx  index.css  main.tsx  types.ts  utils.ts
ui/components/: AppSettingsModal.tsx  ConfirmDropdown.tsx  Console.tsx  Dashboard.tsx  EmptyState.tsx  ErrorBoundary.tsx  GlobalDashboard.tsx  Header.tsx  InstallationProgressModal.tsx  Select.tsx  Sidebar.tsx  TextEditor.tsx  (+3 more)
(+248 files in other folders)
