[package]
name = "mc_server_wrapper"
version = "1.1.0"
edition = "2024"

[lib]
name = "mc_server_wrapper_core"
path = "src/core/mod.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
zip = "2.0"
base64 = "0.22"
sha2 = "0.10"
sha1 = "0.10"
futures-util = "0.3"
walkdir = "2.5"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0"
sysinfo = "0.33"
regex = "1.10"
serde_yaml = "0.9"
tokio-cron-scheduler = "0.11"
sevenz-rust = "0.6.1"
urlencoding = "2.1"
moka = { version = "0.12", features = ["future"] }
ferinth = "2.12"
url = "2.5"
tauri-plugin-opener = "2.0.0-rc.0"
hex = "0.4"
flate2 = "1.1.8"
tar = "0.4.44"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.10"
wiremock = "0.6"
tokio-test = "0.4"

[[test]]
name = "core_tests"
path = "tests/core/mod.rs"
